--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 NODE_PATH=src
-REACT_APP_API_URL=https://dimo.cash
+REACT_APP_API_URL=https://cash
 
-REACT_APP_GOOGLE_CLIENT_ID=383159156033-gipvjoatfl1t5kfh5501e5limbul5ao2.apps.googleusercontent.com
-REACT_APP_FACEBOOK_APP_ID=347503352631730
-TWITTER_CONSUMER_KEY=DDjhoMMYGAelzURaSZYxgli9a
-TWITTER_CONSUMER_SECRET=qe2RI4taHHlvfRGcPksuQnm9vnPPAi6rXNoOf3EjmlqNFC77Kq
-TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAABLw%2FAAAAAAAb%2Fzr1vFirHBTwr25ab33S6%2FslCU%3DQDGiPrBj04WuwGqpJHiCnryGZzROWdF6h04tzzGO1Xci5FQWf1
+REACT_APP_GOOGLE_CLIENT_ID=383159156033-gipvjobul5ao2.apps.googleusercontent.com
+REACT_APP_FACEBOOK_APP_ID=347501730
+TWITTER_CONSUMER_KEY=DDjhoMMYGA9a
+TWITTER_CONSUMER_SECRET=qe2RI4taHHlvfRGcPrXNoOf3EjmlqNFC77Kq
+TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAHBTwr25ab33S6%2FslCU%3DQDGiPrBj04WuwGqpJHiCnryGZzROWdF6h04tzzGO1Xci5FQWf1
